prodMetadata/src/objects/Contact_Leg_junction__c.object
<CustomObject>
    <description>Relates Contacts to Legislation object with many to many relationship</description>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>KW - Member Record, KW - Staffer Record</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Legislation related to this Contact</relationshipLabel>
        <relationshipName>Contact_Leg_junction</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Cosponsored__c</fullName>
        <label>Date Cosponsored</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legislation__c</fullName>
        <label>Legislation</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Legislation__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Legislation__c</referenceTo>
        <relationshipLabel>Contacts related to this Legislation</relationshipLabel>
        <relationshipName>Contact_Leg</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Co-sponsor</fullName>
                </value>
                <value>
                    <fullName>Key Ally</fullName>
                </value>
                <value>
                    <fullName>Leaning Oppose</fullName>
                </value>
                <value>
                    <fullName>Lean Support</fullName>
                </value>
                <value>
                    <fullName>On Fence</fullName>
                </value>
                <value>
                    <fullName>Oppose</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Target</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tweet_From_Template__c</fullName>
        <description>Tweet from Tweet template on Legislation page with merge fields filled in.</description>
        <formula>if (isblank(Legislation__r.Tweet_Template__c),&quot;&quot;,
 SUBSTITUTE(
   SUBSTITUTE(
      SUBSTITUTE(
          SUBSTITUTE( Legislation__r.Tweet_Template__c, &quot;&lt;BILL&gt;&quot;, Legislation__r.Full_Bill_Number__c ), 
     &quot;&lt;TITLE&gt;&quot;,  text(Contact__r.Salutation) ),
   &quot;&lt;NAME&gt;&quot;,   Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName  ),
  &quot;&lt;TWUSER&gt;&quot;,   if(isblank(Contact__r.Twitter_ID_from_KW__c), &quot;[No TW handle]&quot;, Contact__r.Twitter_ID_from_KW__c) )
)</formula>
        <inlineHelpText>Tweet from Tweet template on Legislation page with merge fields filled in.</inlineHelpText>
        <label>Tweet From Template</label>
        <type>Text</type>
    </fields>
    <label>Contact Related to Legislation</label>
    <nameField>
        <displayFormat>ContLeg-{0000}</displayFormat>
        <label>Contact-Leg ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contacts Related to Legislation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>